--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,27 @@
 {
-  "env": {
-    "node": true,
-    "browser": true,
-    "jest": true
-  },
-  "root": true,
-  "extends": [ 
-    "eslint:recommended",
-    "plugin:jsx-a11y/recommended"
-  ],
-  "plugins": ["@typescript-eslint", "jsx-a11y"],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "react-hooks"],
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
-    "no-unused-vars": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/no-noninteractive-element-interactions": 0,
-    "@typescript-eslint/no-unused-vars": ["error"]
+    "jsx-a11y/no-noninteractive-element-interactions": 0
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
   }
 }
+
