--- a/package.json
+++ b/package.json
@@ -1,58 +1,62 @@
 {
-  "name": "totalmoney",
+  "name": "bud",
   "version": "1.0.0",
-  "description": "Crazy cards",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production",
+    "dev": "webpack serve --config webpack.config.ts",
+    "build": "webpack --mode development",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --no-cache --watchAll",
-    "server": "json-server --watch db.json"
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --no-cache"
   },
   "author": "Lorenz",
   "license": "ISC",
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "json-server": "^0.17.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.3.0",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.6.2",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.20.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-webpack-plugin": "^3.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "jsdom": "^20.0.0",
-    "jsdom-global": "^3.0.2",
-    "postcss": "^8.4.14",
-    "postcss-loader": "^7.0.1",
-    "postcss-preset-env": "^7.7.2",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.1.7",
-    "ts-loader": "^9.3.1",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/runtime": "^7.12.5",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/jest": "^26.0.20",
+    "@types/mini-css-extract-plugin": "^1.2.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/webpack-dev-server": "^4.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "esbuild-jest": "^0.5.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.4.1",
+    "fork-ts-checker-webpack-plugin": "^6.0.8",
+    "html-webpack-plugin": "^5.3.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.3",
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.3.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
+  },
+  "dependencies": {
+    "msw": "^0.44.2",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "swr": "^1.3.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
