--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,28 @@
 {
+  // "compilerOptions": {
+  //   "outDir": "./dist/",
+  //   "noImplicitAny": true,
+  //   "target": "ES2022",
+  //   "allowJs": true,
+  //   "allowSyntheticDefaultImports": true,
+  //   "moduleResolution": "Node",
+  //   "module": "ES2022",
+  //   "jsx": "react",
+  //   "sourceMap": true,
+  // }
   "compilerOptions": {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
-    "target": "ES2022",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "Node",
-    "module": "ES2022",
-    "jsx": "react",
-    "sourceMap": true,
-  }
-  
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    // "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react"
+  },
+  "include": ["src", "setupTests.ts", "jest.config.ts", "setupServer"], 
 }
